# ChangeLog for sys-apps/shadow
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/shadow/ChangeLog,v 1.154 2006/07/09 03:58:39 kumba Exp $

  09 Jul 2006; Joshua Kinard <kumba@gentoo.org> shadow-4.0.15-r2.ebuild:
  Marked stable on mips.

*shadow-4.0.16-r2 (06 Jul 2006)

  06 Jul 2006; Mike Frysinger <vapier@gentoo.org>
  +files/shadow-4.0.16-mail-creation.patch, +shadow-4.0.16-r2.ebuild:
  Backport fix from upstream for mail spool creation #139346 by Wolfram Schlich.

*shadow-4.0.16-r1 (04 Jul 2006)

  04 Jul 2006; Mike Frysinger <vapier@gentoo.org>
  +files/shadow-4.0.16-check-opendir.patch,
  +files/shadow-4.0.16-fix-useradd-usergroups.patch,
  +shadow-4.0.16-r1.ebuild:
  Fix useradd behavior when using -g #128715 by Max Lorenz and fix segfault in
  userdel with -r and /dev/null #139148 by David Roussel.

  10 Jun 2006; <roy@gentoo.org> shadow-4.0.14-r1.ebuild,
  shadow-4.0.15-r2.ebuild, shadow-4.0.16.ebuild:
  Move grpconv from baselayout to shadow where it belongs.

  09 Jun 2006; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Make the login.defs installed not throw warning about GETPASS_ASTERISKS, by
  enabling it only skey.

*shadow-4.0.16 (07 Jun 2006)

  07 Jun 2006; Mike Frysinger <vapier@gentoo.org> +shadow-4.0.16.ebuild:
  Version bump.

  03 Jun 2006; Rene Nussbaumer <killerfox@gentoo.org>
  shadow-4.0.15-r2.ebuild:
  Stable on hppa. See bug #133615.

  31 May 2006; Thomas Cort <tcort@gentoo.org> shadow-4.0.15-r2.ebuild:
  Stable on alpha wrt security Bug #133615.

  30 May 2006; Markus Ullmann <jokey@gentoo.org> shadow-4.0.15-r2.ebuild:
  Stable on arm wrt bug #133615

  30 May 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  shadow-4.0.15-r2.ebuild:
  Stable on sparc wrt security #133615

  30 May 2006; Luca Barbato <lu_zero@gentoo.org> shadow-4.0.15-r2.ebuild:
  Marked ppc

  30 May 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  shadow-4.0.15-r2.ebuild: