@@ -1,0 +1,3 @@
+MD5 bc5972a195290533b4c0576276056ed9 shadow-4.0.17.tar.bz2 1496220
+RMD160 590fbe5d0363da44370b026282c8226ee64f4603 shadow-4.0.17.tar.bz2 1496220
+SHA256 6e85b7a01d311fdb181d909b00c6e42bf08816c13e7f54d6dcc1d7a342ef98cd shadow-4.0.17.tar.bz2 1496220
